Fix layout bug with palettes.

--- a/app/styleguide/palette/demo.scss
+++ b/app/styleguide/palette/demo.scss
@@ -247,3 +247,7 @@
 .palette-group-blueGrey {
   @include colorGroups($paletteBlueGrey);
 }
+
+.palette-block {
+  display: inline-block;
+}
